--- a/student_search.css
+++ b/student_search.css
@@ -147,6 +147,7 @@ label.logo {
     align-items: center;
     margin-left: 67.4vw;
     margin-top: -6vw;
+    position: relative;
 }
 
 #search-input {
@@ -370,4 +371,48 @@ border: 4px solid #6d6b7e14;
 .dropdown:hover .dropdown-content {
     display: block;
     
+}
+/* Dropdown button styles */
+.dropdown-btn {
+    
+    text-decoration: none;
+    display: block;
+    border: none; /* Remove border */
+    background: none; /* Remove background */
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    color: black; /* Make text transparent */
+    font-size: 18px; /* Set font size to 0 to hide text */
+}
+
+/* Apply hover effect to dropdown button */
+.dropdown-btn:hover {
+    color: #ddd; /* Change to match the hover effect color */
+}
+
+
+#suggestions {
+    display: none;
+    position: absolute;
+    top: 100%; /* Position below the search box */
+    left: 0;
+    width: 74%;
+    background-color: #fff;
+    border: 2px solid #d4d3d3;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Ensure it appears above other elements */
+    max-height: 200px; /* Limit max height to avoid excessive scrolling */
+    overflow-y: auto; /* Enable vertical scrolling if needed */
+    border-radius: 15px;
+}
+
+/* Style for individual suggestions */
+.suggestion {
+    padding: 8px 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.suggestion:hover {
+    background-color: #f5f5f5;
 }
