--- a/projet-p/ecole-profile.ejs
+++ b/projet-p/ecole-profile.ejs
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>student | school infos</title>
-    <link rel="stylesheet" href="ecole-prof.css" />
+    <link rel="stylesheet" href="/projet-p/ecole-prof.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -24,7 +23,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="edulink0.png" alt="" /></label>
+      <label class="logo"><img src="/projet-p/edulink0.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -37,7 +36,7 @@
     <div class="profil">
         <div class="info-p">
           <div class="pfp">
-            <img src="profil.jpg" alt="" />
+            <img src="/projet-p/profil.jpg" alt="" />
           </div>
           <div class="info-eco">
             <h1>Informations</h1>
@@ -87,7 +86,7 @@
 
        <div class="divs-c-s"> 
           
-          <img src="edulinklogo.png" alt="" />
+          <img src="/projet-pedulinklogo.png" alt="" />
           <h4>your ultimate guide for educational excellence!</h4>
           <button class="button-footer">JOIN US</button>
         </ul></div>
